--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .card {
+        border-radius: 0.375rem;
+        overflow: hidden;
+        max-width: 300px;
+        --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+        --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+        box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+        --tw-shadow-color: #8a8a8a;
+        --tw-shadow: var(--tw-shadow-colored);
+    }
+
+    .cardTitle {
+        width: 100%;
+        padding: 0.5rem;
+    }
+
+    .cardButton {
+        --tw-text-opacity: 1;
+        color: rgb(235 0 41 / var(--tw-text-opacity));
+        width: 100%;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.25rem;
+        padding-top: 0.75rem;
+        padding-bottom: 0.75rem;
+    }
+
+    .cardButton:hover {
+        --tw-bg-opacity: 1;
+        background-color: rgb(235 0 41 / var(--tw-bg-opacity));
+        color: rgb(255 255 255 / var(--tw-text-opacity));
+        font-weight: 600;
+        transition-property: color, fill, stroke;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 200ms;
+        cursor: pointer;
+    }
+}
