--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,39 @@
-.back{
+.back {
     background-color: rgba(255, 255, 255, 0.12);
     border-radius: 15px;
     padding: 0 25px;
     outline: none;
 }
- html,body{
+
+html,
+body {
     max-height: 100%;
     margin: 0;
+    background: #f1f1f1;
     /* border: 3px solid red; */
 }
-.active-navlink{
+
+.active-navlink {
     @apply text-white bg-projectRed-2
 }
 
 
+.wallet {
+    background-image: linear-gradient(
+  40deg,
+  hsl(0deg 100% 50%) 0%,
+  hsl(358deg 100% 50%) 11%,
+  hsl(357deg 100% 49%) 20%,
+  hsl(355deg 100% 49%) 28%,
+  hsl(354deg 100% 48%) 35%,
+  hsl(353deg 100% 48%) 41%,
+  hsl(352deg 100% 47%) 49%,
+  hsl(351deg 100% 47%) 60%,
+  hsl(350deg 100% 47%) 76%,
+  hsl(350deg 100% 46%) 100%
+);
+
+    box-shadow: 7px 10px 19px -10px rgba(0, 0, 0, 0.63);
+    -webkit-box-shadow: 7px 10px 19px -10px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 7px 10px 19px -10px rgba(0, 0, 0, 0.63);
+}
