--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
         gap: 0.25rem;
         padding-top: 0.75rem;
         padding-bottom: 0.75rem;
+        border-radius: 5px;
     }
 
     .cardButton:hover {
